--- a/styles/style.css
+++ b/styles/style.css
@@ -10,16 +10,71 @@
 }
 
 .header {
-  height: 100vh;
+  border: 4px solid #ff6550;
+  display:flex;
+  flex-direction: row;
+  align-items: center; 
+  height:100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+}
+.header__title {
+  border: 4px solid #ff6550;
+  width: 730px;
+  line-height: 96px;
+  margin-left:64px;
+  font-size: 102px;
+  font-weight: 600;
+  z-index: 4;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__main-illustration {
+  border: 4px solid #ff6550;
+  width:765px;
+  height:608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
+}
+
+.header__subtitle {
+ border: 4px solid #ff6550;
+ position: absolute;
+ line-height: 25px;
+ width: 388px;
+ font-size: 18px;
+ font-weight: normal;
+ margin-left:64px;
+ bottom: 30px;
+ 
+}
+
+.header__logo {
+  border: 4px solid #ff6550;
+  position: absolute;
+  width: 228px;
+  height: 32px;
+  
+}
+
+.header__logo_place_header {
+ top: 30px;
+ margin-left:64px;
+ z-index: 4;
+}
+
+
 .header__square-pic {
+  position: absolute;
+  border: 4px solid #ff6550;
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
+  top: 64px;
+  right: 0;
+  
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +84,5 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+
