--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,8 @@
 }
 
 .header {
-  border: 4px solid #ff6550;
+  position: relative;
+  outline: 1px solid #ff6550;
   display:flex;
   flex-direction: row;
   align-items: center; 
@@ -20,7 +21,7 @@
   background-color: #f2f2f2;
 }
 .header__title {
-  border: 4px solid #ff6550;
+  outline: 1px solid #ff6550;
   width: 730px;
   line-height: 96px;
   margin-left:64px;
@@ -30,7 +31,7 @@
 }
 
 .header__main-illustration {
-  border: 4px solid #ff6550;
+  outline: 1px solid #ff6550;
   width:765px;
   height:608px;
   position: absolute;
@@ -40,7 +41,7 @@
 }
 
 .header__subtitle {
- border: 4px solid #ff6550;
+ outline: 1px solid #ff6550;
  position: absolute;
  line-height: 25px;
  width: 388px;
@@ -48,11 +49,10 @@
  font-weight: normal;
  margin-left:64px;
  bottom: 30px;
- 
 }
 
 .header__logo {
-  border: 4px solid #ff6550;
+  outline: 1px solid #ff6550;
   position: absolute;
   width: 228px;
   height: 32px;
@@ -68,7 +68,7 @@
 
 .header__square-pic {
   position: absolute;
-  border: 4px solid #ff6550;
+  outline: 1px solid #ff6550;
   background-color: #2f80ed;
   height: 568px;
   width: 568px;
@@ -76,6 +76,49 @@
   right: 0;
   
 }
+
+.two-columns{
+  margin-top: 100px;
+  outline: 1px solid #ff6550;
+  display: flex;
+  align-items: flex-start ;
+
+}
+.two-columns__brief{
+  outline: 1px solid #ff6550;
+  width: 175px;
+  color: #2f80ed;
+  line-height:1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-left: auto;
+}
+
+.two-columns__main-text {
+  outline: 1px solid #ff6550;
+  width:80%;
+  min-width:784px;
+  list-style-type:none;
+}
+
+
+.two-columns__paragraph {
+  outline: 1px solid #ff6550;
+  line-height:34px;
+  font-size: 24px;
+  font-weight: normal;
+  
+}
+
+.two-columns__span {
+  outline: 1px solid #ff6550;
+  line-height:34px;
+  font-size: 24px;
+  font-weight: 600;
+  font-weight: bold; 
+}
+
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
