--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,7 @@
   outline: 1px solid #ff6550;
   display: flex;
   align-items: flex-start ;
+  justify-content:center;
 
 }
 .two-columns__brief{
@@ -102,13 +103,20 @@
 }
 
 
-.two-columns__paragraph {
+.two-columns__paragraph  {
   outline: 1px solid #ff6550;
   line-height:34px;
   font-size: 24px;
   font-weight: normal;
-  
+  margin-bottom:30px;
 }
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+  
+.two-columns_paragraph:1{
+  margin-top: 30px;
+ }
 
 .two-columns__span {
   outline: 1px solid #ff6550;
