--- a/styles/style.css
+++ b/styles/style.css
@@ -81,9 +81,15 @@
   margin-top: 100px;
   outline: 1px solid #ff6550;
   display: flex;
-  align-items: flex-start ;
-  justify-content:center;
+  justify-content: space-between;
+  width: 80%;
+}
 
+.two-columns__main-text {
+  outline: 1px solid #ff6550;
+  width:80%;
+  min-width:784px;
+  list-style-type:none;
 }
 .two-columns__brief{
   outline: 1px solid #ff6550;
@@ -93,13 +99,6 @@
   font-size: 18px;
   font-weight: normal;
   margin-left: auto;
-}
-
-.two-columns__main-text {
-  outline: 1px solid #ff6550;
-  width:80%;
-  min-width:784px;
-  list-style-type:none;
 }
 
 
