--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+
+
+a.subtitle__link::after,a.feyman__link::after {
+content:' \2192';
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -59,6 +65,12 @@
   
 }
 
+.subtitle__link {
+  color: #2f80ed;
+  text-decoration: none;
+
+}
+
 .header__logo_place_header {
  top: 30px;
  margin-left:64px;
@@ -77,8 +89,13 @@
   
 }
 
-.two-columns{
+.description {
   margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns{
   outline: 1px solid #ff6550;
   display: flex;
   justify-content: space-between;
@@ -90,6 +107,8 @@
   width:80%;
   min-width:784px;
   list-style-type:none;
+  margin: 0;
+  padding:0;
 }
 .two-columns__brief{
   outline: 1px solid #ff6550;
@@ -98,7 +117,7 @@
   line-height:1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-left: auto;
+  margin:0;
 }
 
 
@@ -113,26 +132,279 @@
   margin-bottom: 0;
 }
   
-.two-columns_paragraph:1{
-  margin-top: 30px;
- }
 
 .two-columns__span {
   outline: 1px solid #ff6550;
   line-height:34px;
   font-size: 24px;
   font-weight: 600;
-  font-weight: bold; 
+}
+
+.digits {
+  outline: 1px solid #ff6550;
+  margin:100px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits__section-title {
+  text-align: center;
+  margin: 0 0 0 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width:60%;
+}
+.digits__section-subtitle {
+  margin: 20px 0 0 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width:60%;
+}
+
+.digits__table {
+  outline: 1px solid #ff6550;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
+  margin: 0 auto;
+  width:1100px;
+}
+
+.table__cell {
+  outline: 1px solid #ff6550;
+  
+}
+
+.table__cell_place_digits {
+  margin-top: 60px;
+  width:250px;
 }
 
 
+.table__text_place_digits {
+ margin-top: 20px;
+ line-height: 1.2;
+ font-size: 18px;
+ font-weight: normal;
+}
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table__heading_place_digits {
+ margin: 0  ;
+ line-height: 1.15;
+ font-size: 24px;
+ font-weight: 600;
+}
+
+.feynman {
+  min-height: 890px;
+  position: relative;
+  outline: 1px solid #ff6550;
+  background-color: #f2f2f2;
+}
+
+.feynman__title {  
+  /* padding-top:100px; */
+  position: relative;
+  text-align: center;
+  outline: 1px solid #ff6550;
+  width: 648px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  top: 100px;
+}
+
+.feyman__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.image_feynman {
+  outline: 1px solid #ff6550;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.feynman__subtitle {
+  position: relative;
+  text-align: center;
+  outline: 1px solid #ff6550;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  top: 70px;
+  width: 360px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feyman__link {
+  position: absolute;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  right: 48px;
+  top: 50%;
+  
+}
+
+.kaufman {
+  position: relative;
+  outline: 1px solid #ff6550;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  background-color:#1f1f1f;
+  color: #f2f2f2;
+  overflow: hidden;
+  padding-bottom: 90px;
+  z-index: -1;
+  
+}
+
+.section-title_theme_dark {
+  margin: 90px 0 0 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width:60%;
+  text-align: center;
+  /* z-index: -1; */
+}
+.kaufman__section-subtitle {
+  margin: 20px 0 0 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+}
+
+.kaufman__table {
+  outline: 1px solid #ff6550;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
+  margin: 0 auto;
+  width:1100px;
+}
+
+.table__cell_teme_dark {
   width: 200px;
+  margin-top: 80px;
   color: white;
   margin-right: 0;
-  margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0 0;
+ }
+
+ .kaufman__triangle{
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: -1;
+ }
+
+ .footer {
+  outline: 1px solid #ff6550;
+  box-sizing: border-box;
+  /* width: 90%; */
+  /* min-height: 350px; */
+  padding: 60px 0 40px 0;
+  background-color: #1f1f1f;
+ }
+
+ .footer__columns {
+  
+  outline: 1px solid #ff6550;
+  display: flex;
+  justify-content: center;
+  background-color:#1f1f1f;
+  color: #f2f2f2;
+  position: relative;
+  justify-content: space-between;
+  min-height: 350px;
+ }
+
+ .footer__column {
+  outline: 1px solid #ff6550;
+  display: flex;
+ }
+
+ .footer__logo_place_footer {
+  outline: 1px solid #ff6550;
+  width:228px;
+  height:32px;
+ }
+
+.footer__author{
+  margin-top: 18px;
+  margin-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column_content_copyright {
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+} 
+
+.footer__column_heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer_column-links li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer_column-links {
+  list-style: none;
+  margin: 20px 0 16px 0;
+  padding: 0;
+  align-items: flex-start;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column_content_info {
+ flex-direction: column;
+ justify-content:flex-start;
+}
+
+.footer__column_content_social {
+  flex-direction: column;
+  justify-content:flex-start;
+}
+.footer_social-icon {
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
 }
 
 
