--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-
-
-a.subtitle__link::after,a.feyman__link::after {
-content:' \2192';
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -17,7 +11,7 @@ content:' \2192';
 
 .header {
   position: relative;
-  display:flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   height:100vh;
@@ -31,16 +25,23 @@ content:' \2192';
   margin-left:64px;
   font-size: 102px;
   font-weight: 600;
-  z-index: 4;
+  z-index: 5;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__main-illustration {
-  width:765px;
-  height:608px;
+  width: 765px;
+  height: 608px;
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 3;
+}
+
+.main-illustration_img {
+  width: 765px;
+  height: 608px;
 }
 
 .header__subtitle {
@@ -49,29 +50,31 @@ content:' \2192';
  width: 388px;
  font-size: 18px;
  font-weight: normal;
- margin-left:64px;
+ left:64px;
  bottom: 30px;
 }
 
-.header__logo {
-  position: absolute;
+.logo {
   width: 228px;
   height: 32px;
-  
 }
 
-.subtitle__link {
+.logo_place_header {
+  position: absolute;
+  background-image: url("../images/logo_place_header.svg");
+  top: 30px;
+  left:64px;
+  z-index: 4;
+}
+
+.header__link {
   color: #2f80ed;
   text-decoration: none;
-
 }
 
-.header__logo_place_header {
- top: 30px;
- margin-left:64px;
- z-index: 4;
+.header__link::after {
+  content:' \2192';
 }
-
 
 .header__square-pic {
   position: absolute;
@@ -112,19 +115,18 @@ content:' \2192';
   margin:0;
 }
 
-
 .two-columns__paragraph  {
   line-height:34px;
   font-size: 24px;
   font-weight: normal;
+  margin-top: 0;
   margin-bottom:30px;
 }
 .two-columns__paragraph:last-child {
   margin-bottom: 0;
 }
   
-
-.two-columns__span {
+.main-text__span  {
   line-height:34px;
   font-size: 24px;
   font-weight: 600;
@@ -137,15 +139,15 @@ content:' \2192';
   align-items: center;
 }
 
-.digits__section-title {
+.section-title {
   text-align: center;
-  margin: 0 0 0 0;
+  margin: 0;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
   width:60%;
 }
-.digits__section-subtitle {
+.section-subtitle {
   margin: 20px 0 0 0;
   text-align: center;
   line-height: 34px;
@@ -154,7 +156,7 @@ content:' \2192';
   width:60%;
 }
 
-.digits__table {
+.table {
   display: flex;
   flex-wrap:wrap;
   justify-content: space-between;
@@ -163,22 +165,19 @@ content:' \2192';
 }
 
 .table__cell {
-}
-
-.table__cell_place_digits {
   margin-top: 60px;
   width:250px;
 }
 
-
-.table__text_place_digits {
+.table__text {
  margin-top: 20px;
+ margin-bottom: 0;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
 }
 
-.table__heading_place_digits {
+.table__heading {
  margin: 0;
  line-height: 1.15;
  font-size: 24px;
@@ -186,13 +185,14 @@ content:' \2192';
 }
 
 .feynman {
+  display: flex;
+  flex-direction: column;
   min-height: 890px;
   position: relative;
   background-color: #f2f2f2;
 }
 
 .feynman__title {  
-  position: relative;
   text-align: center;
   width: 648px;
   margin-left: auto;
@@ -200,26 +200,31 @@ content:' \2192';
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  top: 100px;
-}
-
-
-.image_feynman {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  margin-top: 100px;
+  margin-bottom: 0;
+  z-index: 3;
 }
 
 .feynman__subtitle {
-  position: relative;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  top: 70px;
-  width: 360px;
+  margin-top: 70px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
+  z-index: 3;
+}
+
+.img_feynman {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width:867px;
+  height:637px;
+  background-image: url("../images/feynman.png");
+  z-index: 0;
 }
 
 .feyman__link {
@@ -234,46 +239,53 @@ content:' \2192';
   
 }
 
+.feyman__link::after {
+  content:' \2192';
+}
+
 .kaufman {
   position: relative;
   align-items: center;
   display: flex;
   flex-direction: column;
   background-color:#1f1f1f;
-  color: #f2f2f2;
   overflow: hidden;
   padding-bottom: 90px;
-  z-index: -1;
+  z-index: 1;
   
 }
 
 .section-title_theme_dark {
   margin: 90px 0 0 0;
-  line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
   width:60%;
   text-align: center;
-  /* z-index: -1; */
+  color: #f2f2f2;
+  z-index: 3;
 }
-.kaufman__section-subtitle {
+
+.section-subtitle_theme_dark {
   margin: 20px 0 0 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
   width: 60%;
+  color: #f2f2f2;
+  z-index: 3;
 }
 
-.kaufman__table {
+.table_theme_dark {
   display: flex;
   flex-wrap:wrap;
   justify-content: space-between;
   margin: 0 auto;
   width:1100px;
+  color: #f2f2f2;
 }
 
-.table__cell_teme_dark {
+.table__cell_theme_dark {
   width: 200px;
   margin-top: 80px;
   color: white;
@@ -285,6 +297,7 @@ content:' \2192';
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  color: #f2f2f2;
 }
 
 .table__text_theme_dark {
@@ -292,10 +305,13 @@ content:' \2192';
   font-size: 18px;
   font-weight: normal;
   margin: 20px 0 0 0;
+  color: #f2f2f2;
  }
 
- .kaufman__triangle{
+ .kaufman__triangle {
+  background-image: url("../images/kaufman-triangle.svg");
   position: absolute;
+  background-size: 877px 877px;
   top: 0;
   right: -210px;
   width: 877px;
@@ -304,14 +320,17 @@ content:' \2192';
  }
 
  .footer {
+  display: flex;
   box-sizing: border-box;
   min-height: 350px;
   padding: 60px 0 40px 0;
   background-color: #1f1f1f;
+  justify-content: center;
  }
 
  .footer__columns {
   display: flex;
+  width: 90%;
   background-color:#1f1f1f;
   color: #f2f2f2;
   position: relative;
@@ -320,12 +339,10 @@ content:' \2192';
 
  .footer__column {
   display: flex;
-  min-height: 350px;
  }
 
- .footer__logo_place_footer {
-  width:228px;
-  height:32px;
+ .logo_place_footer {
+ background-image: url("../images/logo_place_footer.svg");
  }
 
 .footer__author{
@@ -342,18 +359,20 @@ content:' \2192';
   justify-content: space-between;
 } 
 
-.footer__column_heading {
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.footer_column-links li a {
+.footer__column_link {
   color: #fff;
   text-decoration: none;
 }
 
-.footer_column-links {
+.footer__column-links {
   list-style: none;
   margin: 20px 0 16px 0;
   padding: 0;
@@ -361,7 +380,9 @@ content:' \2192';
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  
 }
+
 .footer__column_content_info {
  flex-direction: column;
  justify-content:flex-start;
@@ -371,10 +392,8 @@ content:' \2192';
   flex-direction: column;
   justify-content:flex-start;
 }
-.footer_social-icon {
+.footer__social-icon {
   margin-right: 10px;
   width: 16px;
   height: 16px;
 }
-
-
